static artifacts for boringssl p256_verify
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/boringssl/boringssl_jni/Makefile
+++ b/boringssl/boringssl_jni/Makefile
@@ -7,12 +7,16 @@ ifeq ($(UNAME_S),Darwin)
     LIB_EXT = dylib
     JNI_OS_DIR = darwin
     CC ?= clang
-    LDFLAGS = -dynamiclib -undefined dynamic_lookup
+    # Use MACOSX_DEPLOYMENT_TARGET from environment or default to 11.0 (first Apple Silicon support)
+    MACOSX_DEPLOYMENT_TARGET ?= 11.0
+    LDFLAGS = -dynamiclib -undefined dynamic_lookup -mmacosx-version-min=$(MACOSX_DEPLOYMENT_TARGET)
+    CFLAGS_EXTRA = -mmacosx-version-min=$(MACOSX_DEPLOYMENT_TARGET)
 else
     LIB_EXT = so
     JNI_OS_DIR = linux
     CC ?= gcc
     LDFLAGS = -shared
+    CFLAGS_EXTRA =
 endif
 
 # Directories
@@ -22,24 +26,31 @@ BSSL_BUILD_DIR = $(BSSL_DIR)/build
 INCLUDES = -I$(BSSL_DIR)/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/$(JNI_OS_DIR)
 
 # Flags
-CFLAGS = -O2 -fPIC $(INCLUDES)
+CFLAGS = -O2 -fPIC $(INCLUDES) $(CFLAGS_EXTRA)
 LIBS = $(BSSL_BUILD_DIR)/libcrypto.a
 
 # Files
 LIB_NAME = libboringssl_precompiles.$(LIB_EXT)
+STATIC_LIB_NAME = libboringssl_precompiles.a
 SRCS = p256_verify.c ecrecover.c
 OBJS = $(SRCS:.c=.o)
 BUILD_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
 BUILD_LIB = $(BUILD_DIR)/$(LIB_NAME)
+BUILD_STATIC_LIB = $(BUILD_DIR)/$(STATIC_LIB_NAME)
 
 # Default target
-all: $(BUILD_DIR) $(BUILD_LIB)
+all: $(BUILD_DIR) $(BUILD_LIB) $(BUILD_STATIC_LIB)
 
 $(BUILD_DIR):
 	mkdir -p $@
 
+# Dynamic library
 $(BUILD_LIB): $(BUILD_OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
+
+# Static library
+$(BUILD_STATIC_LIB): $(BUILD_OBJS)
+	ar rcs $@ $^ $(LIBS)
 
 $(BUILD_DIR)/%.o: %.c | $(BUILD_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
