--- a/boringssl/build.gradle
+++ b/boringssl/build.gradle
@@ -19,9 +19,31 @@ plugins {
     id 'com.jfrog.artifactory' version '5.2.3'
 }
 
+// Configure source sets - separate GraalVM classes from main JAR
+sourceSets {
+  graal {
+    java {
+      srcDir 'src/main/java'
+      include '**/*Graal*.java'
+      include '**/BoringSSLPrecompilesCommon.java'
+    }
+    // Graal source set needs access to main source set classes
+    compileClasspath += sourceSets.main.output
+  }
+  main {
+    java {
+      exclude '**/*Graal*.java'
+    }
+  }
+}
+
 dependencies {
     implementation 'net.java.dev.jna:jna:5.12.1'
     implementation project(':common')
+
+    // GraalVM SDK only for graal source set
+    graalImplementation 'org.graalvm.sdk:graal-sdk:24.0.2'
+    graalImplementation project(':common')
     testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'net.java.dev.jna:jna:5.12.1'
     testImplementation 'io.consensys.tuweni:tuweni-bytes:2.7.1'
@@ -61,6 +83,43 @@ task linuxRiscv64LibCopy(type: Copy) {
 }
 processResources.dependsOn linuxRiscv64LibCopy
 
+// Static library copy tasks (for GraalVM native-image)
+task macArmStaticLibCopy(type: Copy) {
+    from 'build/darwin-aarch64/lib/libboringssl_precompiles.a'
+    from 'boringssl_jni/p256_verify.h'
+    into 'build/resources-static/lib/aarch64'
+}
+
+task macStaticLibCopy(type: Copy) {
+    from 'build/darwin-x86-64/lib/libboringssl_precompiles.a'
+    from 'boringssl_jni/p256_verify.h'
+    into 'build/resources-static/lib/x86-64'
+}
+
+task linuxStaticLibCopy(type: Copy) {
+    from 'build/linux-gnu-x86_64/lib/libboringssl_precompiles.a'
+    from 'boringssl_jni/p256_verify.h'
+    into 'build/resources-static/lib/x86-64'
+}
+
+task linuxArm64StaticLibCopy(type: Copy) {
+    from 'build/linux-gnu-aarch64/lib/libboringssl_precompiles.a'
+    from 'boringssl_jni/p256_verify.h'
+    into 'build/resources-static/lib/aarch64'
+}
+
+task linuxRiscv64StaticLibCopy(type: Copy) {
+    from 'build/linux-gnu-riscv64/lib/libboringssl_precompiles.a'
+    from 'boringssl_jni/p256_verify.h'
+    into 'build/resources-static/lib/riscv64'
+}
+
+// Task to prepare static resources
+task prepareStaticResources {
+    dependsOn macArmStaticLibCopy, macStaticLibCopy, linuxStaticLibCopy,
+              linuxArm64StaticLibCopy, linuxRiscv64StaticLibCopy
+}
+
 
 
 jar {
@@ -89,6 +148,14 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+task staticJar(type: Jar, dependsOn: [prepareStaticResources, graalClasses]) {
+    archiveBaseName = 'besu-native-boringssl'
+    archiveClassifier = 'static'
+    from 'build/resources-static'
+    from sourceSets.graal.output
+    includeEmptyDirs = false
+}
+
 
 publishing {
     publications {
@@ -100,6 +167,7 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact javadocJar
+            artifact staticJar
 
             pom {
                 name = "Besu Native - ${project.name}"
