use native flavor of macos-15
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,7 +154,7 @@ jobs:
           path: boringssl/build/
 
   native-build-macos:
-    runs-on: macos-15
+    runs-on: macos-15-intel
     env:
       SKIP_GRADLE: true
     steps:
